--- a/backend/config/src/main/resources/config/selenium.properties
+++ b/backend/config/src/main/resources/config/selenium.properties
@@ -1,9 +1,10 @@
-#spring.data.elasticsearch.cluster-nodes=172.16.36.20:9300
-#spring.data.elasticsearch.cluster-name=elasticCluster
-#spring.data.elasticsearch.repositories.enabled=true
-
 server.port=${port:0}
-spring.application.name=elastic
+spring.application.name=selenium
+service.EsService.serviceId=elastic
+service.EsService.url=save_qr_code
+selenium.browser.proxy=192.168.254.20:3142
+selenium.browser.path=C:\\projects\\IDEA\\neon_backend\\selenium-service\\src\\main\\resources\\chromedriver.exe
+
 management.endpoints.web.exposure.include=*
 #we tell the Eureka Client the sever url
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
