add item object

--- a/backend/config/src/main/resources/config/api-interface.properties
+++ b/backend/config/src/main/resources/config/api-interface.properties
@@ -1,7 +1,7 @@
 server.port=${port:0}
 spring.application.name=api-interface
 service.selenium.serviceId=selenium
-service.selenium.linkSearch=set_qr_code
+service.selenium.qrLink=set_qr_code
 #service.link.secret=SecretKeyToGenJWTs
 #service.link.clientId=trusted-app
 #service.link.security=http://172.16.36.21:8096/security/oauth/token
