--- a/backend/config/src/main/resources/config/selenium.properties
+++ b/backend/config/src/main/resources/config/selenium.properties
@@ -1,7 +1,7 @@
 server.port=${port:0}
 spring.application.name=selenium
 service.EsService.serviceId=elastic
-service.EsService.url=save_qr_code
+service.EsService.qrSaveUrl=save_qr_code
 selenium.browser.proxy=192.168.254.20:3142
 selenium.browser.path=C:\\projects\\IDEA\\neon_backend\\selenium-service\\src\\main\\resources\\chromedriver.exe
 
