--- a/backend/elastic/pom.xml
+++ b/backend/elastic/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>elastic</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>elastic</name>
-	<description>Demo project for Spring Boot</description>
+	<description>ElasticSearch service for Best Price project</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -21,12 +21,21 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>ru.bestprice.backend</groupId>
+			<artifactId>exlibrary</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
